--- a/src/stylus/_tabs.styl
+++ b/src/stylus/_tabs.styl
@@ -1,21 +1,45 @@
 .tabs 
-  border: 1px solid blue
+  margin-top: 2em
+  border-top: 1px solid var(--grayishBlue)
   &-link
-    padding: 1em 0
     border-bottom: 1px solid var(--grayishBlue)
   &-content 
     display: none
     img 
       max-width: 100%
+      margin-bottom: 2em
+  &-grid 
+    margin-top: 4em
+  label 
+    display: block
+    padding: 1em 0 
+    position: relative
+    &:after 
+      display: none
+      content: ""
+      width: 50%
+      height: 5px
+      position: absolute
+      bottom: 0
+      left: 0 
+      transform: translateX(50%)
+      box-shadow: 0 5px 0 0 inset hsl(0, 94%, 66%)
+
   input 
     display: none
   input[id="bookmarking"]:checked
+    & ~ ul [for="bookmarking"]:after 
+      display: block
     & ~ .tabs-grid #tab-bookmarking
       display: block
   input[id="searching"]:checked
+    & ~ ul [for="searching"]:after 
+      display: block
     & ~ .tabs-grid #tab-searching
       display: block
   input[id="sharing"]:checked
+    & ~ ul [for="sharing"]:after 
+      display: block
     & ~ .tabs-grid #tab-sharing
       display: block
 
