--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -61,6 +61,7 @@
 .header {
   background-color: #fff;
   padding: 1em 0;
+  z-index: 2;
   position: sticky;
   top: 0;
   left: 0;
@@ -90,10 +91,10 @@
   padding-top: 1em;
 }
 .tabs {
-  border: 1px solid #00f;
+  margin-top: 2em;
+  border-top: 1px solid var(--grayishBlue);
 }
 .tabs-link {
-  padding: 1em 0;
   border-bottom: 1px solid var(--grayishBlue);
 }
 .tabs-content {
@@ -101,14 +102,43 @@
 }
 .tabs-content img {
   max-width: 100%;
+  margin-bottom: 2em;
+}
+.tabs-grid {
+  margin-top: 4em;
+}
+.tabs label {
+  display: block;
+  padding: 1em 0;
+  position: relative;
+}
+.tabs label:after {
+  display: none;
+  content: "";
+  width: 50%;
+  height: 5px;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  transform: translateX(50%);
+  box-shadow: 0 5px 0 0 inset #fa5757;
 }
 .tabs input {
   display: none;
 }
+.tabs input[id="bookmarking"]:checked ~ ul [for="bookmarking"]:after {
+  display: block;
+}
 .tabs input[id="bookmarking"]:checked ~ .tabs-grid #tab-bookmarking {
   display: block;
 }
+.tabs input[id="searching"]:checked ~ ul [for="searching"]:after {
+  display: block;
+}
 .tabs input[id="searching"]:checked ~ .tabs-grid #tab-searching {
+  display: block;
+}
+.tabs input[id="sharing"]:checked ~ ul [for="sharing"]:after {
   display: block;
 }
 .tabs input[id="sharing"]:checked ~ .tabs-grid #tab-sharing {
@@ -116,6 +146,117 @@
 }
 .features {
   text-align: center;
+  padding: 3em 0;
+}
+.download {
+  text-align: center;
+  padding: 3em 0;
+}
+.download .u-wrapper > p {
+  margin-bottom: 3em;
+}
+.download-grid {
+  margin-top: 3em;
+  display: grid;
+  grid-row-gap: 3em;
+  margin: 0 1em;
+}
+.download-item {
+  box-shadow: 0 10px 20px -5px rgba(145,148,161,0.4);
+  border-radius: 1em;
+  padding: 1.5em;
+  padding-top: 2.5em;
+  background: url("../images/bg-dots.svg") repeat-x center bottom 100px;
+}
+.download-item .u-h3 {
+  margin-bottom: 0.5em;
+  margin-top: 1.5em;
+}
+.download-item .u-p {
+  margin-bottom: 4em;
+  margin-top: 0;
+}
+.carousel {
+  text-align: left;
+  margin: 2em 0;
+}
+.carousel-detail[open] .carousel-header {
+  border: none;
+}
+.carousel-detail[open] .carousel-header::-webkit-details-marker {
+  color: var(--softRed);
+}
+.carousel-header {
+  font-size: 0.9em;
+  padding: 1.5em 0;
+  border-bottom: 1px solid rgba(145,148,161,0.5);
+  outline: none;
+}
+.carousel-header::-webkit-details-marker {
+  color: var(--softBlue);
+  float: right;
+}
+.questions {
+  padding: 3em 0;
+  text-align: center;
+}
+.join {
+  text-align: center;
+  background: var(--softBlue);
+  color: #fff;
+  padding: 3em 0;
+  margin-top: 3em;
+}
+.join small {
+  text-transform: uppercase;
+  letter-spacing: 4px;
+}
+.join .form-input {
+  width: 100%;
+  padding: 1.5em;
+  box-sizing: border-box;
+  margin-bottom: 1em;
+  border: none;
+  border-radius: 0.5em;
+  outline: none;
+}
+.join .form ::placeholder {
+  color: var(--grayishBlue);
+}
+.join .form input[type="submit"] {
+  margin: 0;
+  outline: none;
+}
+.footer {
+  background: var(--veryDarkBlue);
+  text-align: center;
+  padding: 3em 0;
+}
+.footer a {
+  color: #fff;
+  text-decoration: none;
+}
+.footer ul {
+  margin: 2em 0;
+}
+.footer ul li {
+  padding: 1em 0;
+  text-transform: uppercase;
+}
+.footer ul li a {
+  color: rgba(255,255,255,0.8);
+  letter-spacing: 1px;
+}
+.footer-social a {
+  width: 40px;
+  height: 40px;
+  display: inline-block;
+}
+.footer-social .facebook {
+  background: url("../images/icon-facebook.svg") no-repeat center;
+}
+.footer-social .twitter {
+  background: url("../images/icon-twitter.svg") no-repeat center;
 }
 :root {
   --softBlue: #5368df;
@@ -131,6 +272,7 @@ body {
 }
 ul {
   padding: 0;
+  margin: 0;
   list-style: none;
 }
 .is-hidden {
@@ -141,10 +283,22 @@ ul {
   margin: 0 auto;
   padding: 0 1em;
 }
-.u-h1,
-.u-h2 {
+.u-h1 {
   font-size: 2em;
   font-weight: 500;
+}
+.u-h2 {
+  font-size: 1.6em;
+  font-weight: 500;
+}
+.u-h3 {
+  font-size: 1.3em;
+  font-weight: 500;
+}
+.u-h4 {
+  font-size: 1.5em;
+  font-weight: 400;
+  margin-top: 0.5em;
 }
 .u-p {
   color: var(--grayishBlue);
@@ -169,4 +323,10 @@ ul {
 .u-button.is-grey {
   background: #f7f7f7;
   color: var(--veryDarkBlue);
+}
+.u-button.is-red {
+  background: var(--softRed);
+}
+.u-button.is-fullWidth {
+  width: 100%;
 }
