--- a/src/stylus/_features.styl
+++ b/src/stylus/_features.styl
@@ -3,3 +3,11 @@
 .features 
   text-align: center
   padding: 3em 0
+  .u-button 
+    display: none
+  .u-p 
+    margin-bottom: 1.5em
+      
+  @media screen and (min-width: 1024px)
+    .u-button 
+      display: block
