--- a/src/stylus/_header.styl
+++ b/src/stylus/_header.styl
@@ -9,7 +9,7 @@
   left: 0
   right: 0
   transition: .3s background
-
+  
   &-logo
     display: inline-flex
     width: 150px
@@ -21,3 +21,5 @@
     display: flex
     justify-content: space-between
     align-items: center
+    maximun(1000px)
+
