--- a/src/stylus/_questions.styl
+++ b/src/stylus/_questions.styl
@@ -1,5 +1,8 @@
 @import "_carousel.styl"
 
 .questions
-  padding: 3em 0
+  padding: 3em 0 6em
   text-align: center
+
+  .u-button 
+    margin-top: 2em
