--- a/src/stylus/_hero.styl
+++ b/src/stylus/_hero.styl
@@ -5,3 +5,20 @@
     max-width 100%
   &-buttons
     padding-top: 1em
+  
+  @media screen and (min-width: 1024px)
+    text-align: left 
+    padding-top: 1em
+    &-grid 
+      display: grid
+      grid-template-columns: 450px 1fr
+      grid-template-areas: "content image"
+      align-items: center
+    &-imageContainer
+      grid-area: image
+      position: relative
+      top: 50px
+      text-align: right  
+    &-content 
+      grid-area: content
+      
