--- a/src/stylus/_menu.styl
+++ b/src/stylus/_menu.styl
@@ -1,12 +1,10 @@
 .menu 
-  // display: 
   visibility: hidden
   opacity: 0
   position: absolute
   top: 100%
   left: 0
   right 0
-  // bottom: 0
   background-color: alpha(hsl(229, 31%, 21%), .9)
   height: 100vh
   transform: translateY(-30px)
@@ -44,8 +42,6 @@
           transform: translateY(0)
           visibility: visible
           opacity: 1
-
-
   &-open
     user-select: none
     width: 40px
@@ -53,3 +49,41 @@
     display: inline-flex
     cursor: pointer
     background: url('../images/icon-hamburger.svg') no-repeat center
+
+  @media screen and (min-width: 1024px)
+    transform: translateY(0)
+    visibility: visible
+    opacity: 1
+    position: initial 
+    height auto
+    background: initial
+    font-size: .8em
+    &-open 
+      display: none
+    .u-wrapper 
+      padding: 0
+    a 
+      color: var(--veryDarkBlue) 
+      &:hover 
+        hover()  
+    ul 
+      display: flex
+      li 
+        border-top: none
+        a 
+          color: black
+        &:last-child
+          a
+            border: none
+            border-radius: 5px
+            margin: 0
+            padding: .7em 2em
+            background: var(--softRed)
+            color: white
+            margin-left: 2em
+            &:hover
+              &:hover
+                background: white
+                color: var(--softRed)
+                box-shadow: 0 0 1px 1px inset var(--softRed)
+
