--- a/src/stylus/styles.styl
+++ b/src/stylus/styles.styl
@@ -1,3 +1,4 @@
+@import "_globals.styl"
 @import "_header.styl"
 @import "_hero.styl"
 @import "_features.styl"
@@ -6,68 +7,5 @@
 @import "_join.styl"
 @import "_footer.styl"
 
-:root
-  --softBlue: hsl(231, 69%, 60%)
-  --softRed: hsl(0, 94%, 66%)
-  --grayishBlue: hsl(229, 8%, 60%)
-  --veryDarkBlue: hsl(229, 31%, 21%)
 
-body
-  font-family: 'Rubik', sans-serif
-  font-size: 18px
-  color: var(--veryDarkBlue)
-  margin: 0
-ul 
-  padding: 0
-  margin: 0
-  list-style: none
-
-.is-hidden 
-  display: none !important 
-
-.u-wrapper
-  max-width: 1280px
-  margin: 0 auto
-  padding: 0 1em
-
-.u-h1 
-  font-size: 2em
-  font-weight: 500
-.u-h2 
-  font-size: 1.6em 
-  font-weight: 500
-.u-h3 
-  font-size: 1.3em
-  font-weight: 500
-.u-h4 
-  font-size: 1.5em
-  font-weight: 400
-  margin-top: .5em
-
-.u-p 
-  color: var(--grayishBlue)
-  line-height: 1.8
-  font-size: .9em
-
-.u-button
-  background: var(--softBlue)
-  color: white
-  padding: 1em
-  font-size: .9em
-  font-weight: 500
-  border: none
-  border-radius: .5em
-  margin-left: .5em
-  box-shadow: 0 4px 5px 0 alpha(hsl(229, 31%, 21%), .4)
-  cursor: pointer
-  &:first-of-type
-    margin: 0
-  &.is-grey
-    background: #f7f7f7
-    color: var(--veryDarkBlue)
-  &.is-red
-    background: var(--softRed)
-
-  &.is-fullWidth
-    width: 100%
 
